--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* .bg-hero-pattern {
-    background-image: url('/path-to-cricket-image.jpg');
-  } */
+body{
+  background: url("./background_image.png");
+  background-size: cover;
+  background-repeat: repeat-y;
+background-position: top;
+overflow-x: hidden;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+
   
